# candid-core

./: .gitignore  Cargo.toml  README.md
.codex/skills/candid-core-issue-pipeline/: SKILL.md
.codex/skills/candid-core-issue-pipeline/agents/: openai.yaml
.github/workflows/: msrv.yml
benches/: allocation.rs  compilation.rs
benches/corpus/: README.md  ledger.did
benches/corpus/imports/: archive.did  common.did  root.did
benches/support/: mod.rs
docs/: architecture.md  benchmarks.md  canonicalization-v1.md  contract-graph.md  verification.md
docs/adrs/: 0001-contract-identities.md  0002-versioning-and-canonical-bytes.md  0003-validated-artifact-boundaries.md  0004-hermetic-source-resolution.md  0005-resource-limits.md  0006-lossless-host-value-abi.md  README.md
docs/benchmarks/: baseline-2026-07-14.md
examples/: bounded_parsing.rs  contract_walkthrough.rs  hermetic_bundle.rs  host_value_validation.rs  semantic_equivalence.rs  trust_boundary.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: canonicalization.rs  contract_json.rs  envelope_json.rs  host_value.rs  provenance.rs  resolver_ids.rs  source_parsing.rs
fuzz/regressions/: .gitkeep
fuzz/regressions/source_parsing/: issue-61-byte-escape-breaks-utf8  issue-61-byte-escape-pair  issue-61-byte-escape-unterminated
fuzz/seeds/canonicalization/: actorless.json
fuzz/seeds/contract_json/: actorless.json  basic.json  funcs.json  recursive.json  variant.json
fuzz/seeds/envelope_json/: actorless.json  basic.json  funcs.json  recursive.json  variant.json  with_extension.json
fuzz/seeds/host_value/: deep-opt-nesting.json  int.json  nat.json  nested.json  null.json  text.json
fuzz/seeds/provenance/: actorless.json  basic.json  funcs.json  recursive.json  variant.json
fuzz/seeds/resolver_ids/: id0.txt  id1.txt  id2.txt  id3.txt  id4.txt
fuzz/seeds/source_parsing/: actorless.did  basic.did  funcs.did  recursive.did  variant.did
src/: bounded.rs  budget.rs  canonical.rs  compile.rs  diagnostics.rs  envelope.rs  lib.rs  limits.rs  migration.rs  model.rs  name_hash.rs  resolver.rs  source.rs  validate.rs  value.rs
src/compile/: artifact.rs  diagnostics.rs  loading.rs  lower.rs  materialize.rs  mod.rs  nesting.rs
src/model/: contract.rs  mod.rs  source_info.rs  type_graph.rs  validation_error.rs
tests/: adr_conformance.rs  adversarial_regression.rs  api_portability.rs  bounded_parse.rs  candid_name_hash.rs  canonical_properties.rs  cli.rs  conformance_vectors.rs  contract_foundation.rs  deep_nesting.rs  diagnostics_contract.rs  ecosystem_examples.rs  host_value_bounds.rs  host_value_conformance.rs  input_bounds.rs  model_public_api.rs  producer_bounds.rs  provenance_bounds.rs  source_identity_bounds.rs
tests/fixtures/conformance/: actorless.contract.json  actorless.did  actorless.identity.json  basic.contract.json  basic.did  class.contract.json  class.did  empty_actor.contract.json  manifest.json  recursive.contract.json  recursive.did  verify_actorless.py  verify_vectors.py
tests/fixtures/conformance/expected/: actorless.expected.json  arena_permutation.expected.json  basic.expected.json  class.expected.json  declaration_root_order.expected.json  duplicate_semantic_nodes.expected.json  empty_actor.expected.json  hash_collision.expected.json  mutual_recursion.expected.json  recursive.expected.json  unicode.expected.json
tests/fixtures/conformance/raw/: actorless.canonical.json  actorless.permuted.json  arena_permutation.interleaved.json  arena_permutation.ordered.json  arena_permutation.reversed.json  basic.canonical.json  basic.permuted.json  class.canonical.json  class.permuted.json  declaration_root_order.direct.json  declaration_root_order.permuted.json  duplicate_semantic_nodes.duplicated.json  duplicate_semantic_nodes.interleaved.json  duplicate_semantic_nodes.minimal.json  empty_actor.canonical.json  empty_actor.no_declarations_key.json  hash_collision.shared_func.json  hash_collision.split_funcs.json  mutual_recursion.direct.json  mutual_recursion.permuted.json  recursive.canonical.json  recursive.permuted.json  unicode.canonical_arena.json  unicode.permuted.json
tests/fixtures/imports/: invalid.did  invalid_syntax.did  root.did  root_missing_service_actor.did  root_service.did  service.did  types.did
tests/fixtures/packaging/: verify_feature_graph.py
