[package]
name = "candid-contract-runtime"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Canonical runtime Contract graph projection for Candid DID interfaces"
license = "Apache-2.0"

[dependencies]
candid_parser = "=0.4.0"
hex = "=0.4.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"

[dev-dependencies]
serde_json = "=1.0.150"
