[package]
name = "candid-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Canonical runtime Contract graph projection for Candid DID interfaces"
license = "Apache-2.0"

[dependencies]
candid = "=0.10.30"
candid_parser = "=0.4.0"
hex = "=0.4.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"

[dev-dependencies]
criterion = { version = "=0.5.1", default-features = false, features = ["cargo_bench_support"] }
proptest = "=1.6.0"
serde_json = "=1.0.150"

[[bench]]
name = "compilation"
harness = false

[[bench]]
name = "allocation"
harness = false
