[package]
name = "candid-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Pinned exactly, matching the crate under test. A floating serde_json is a
# real hazard here: this crate's observable decode behaviour depends on
# serde_json's 128-frame recursion limit, so the fuzzer must build against the
# same version the library pins.
[dependencies]
libfuzzer-sys = "=0.4.13"
serde_json = "=1.0.150"

[dependencies.candid-core]
path = ".."

[[bin]]
name = "source_parsing"
path = "fuzz_targets/source_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "contract_json"
path = "fuzz_targets/contract_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonicalization"
path = "fuzz_targets/canonicalization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resolver_ids"
path = "fuzz_targets/resolver_ids.rs"
test = false
doc = false
bench = false

[[bin]]
name = "provenance"
path = "fuzz_targets/provenance.rs"
test = false
doc = false
bench = false

[[bin]]
name = "host_value"
path = "fuzz_targets/host_value.rs"
test = false
doc = false
bench = false

[[bin]]
name = "envelope_json"
path = "fuzz_targets/envelope_json.rs"
test = false
doc = false
bench = false
